--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -336,9 +336,9 @@ video {
   display: flex;
   flex-direction: column;
   margin-top: 100px;
-  font-weight: 700;
+  font-weight: 900;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  // justify-content: center;
+  justify-content: center;
   align-items: center;
   color: white;  
   z-index: 1;
