--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -260,6 +260,9 @@ a {
   margin-left: 20px;
   margin-top: 50px;
   // font-weight: 700;
+  text-align: center;
+  padding: 15px;
+  margin: 10px;;
   width: 100%;
   height: 100%;
   top: 0;
@@ -323,6 +326,8 @@ video {
   display: flex;
   flex-direction: column;
   margin-top: 100px;
+  text-align: center;
+
   // justify-content: center;
   align-items: center;
   color: white;  
@@ -339,6 +344,7 @@ video {
   font-weight: 900;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   justify-content: center;
+  text-align: center;
   align-items: center;
   color: white;  
   z-index: 1;
